force-app/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Terms-1</fullName>
            </value>
            <value>
                <fullName>Payment Terms-2</fullName>
            </value>
            <value>
                <fullName>Payment Terms-3</fullName>
            </value>
            <value>
                <fullName>Payment Terms-4</fullName>
            </value>
            <value>
                <fullName>Payment Terms-5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>