force-app/main/default/objects/Account/fields/Price_Level__c.field-meta.xml
<CustomField>
    <fullName>Price_Level__c</fullName>
    <label>Price Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>P5</fullName>
            </value>
            <value>
                <fullName>A-LIST</fullName>
            </value>
            <value>
                <fullName>B-LIST</fullName>
            </value>
            <value>
                <fullName>C-LIST</fullName>
            </value>
            <value>
                <fullName>D-LIST</fullName>
            </value>
            <value>
                <fullName>E-LIST</fullName>
            </value>
            <value>
                <fullName>F-LIST</fullName>
            </value>
            <value>
                <fullName>LIST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>