force-app/main/default/objects/Account/fields/Primary_Branch__c.field-meta.xml
<CustomField>
    <fullName>Primary_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Accounts (Primary Branch)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>