force-app/main/default/objects/Account/fields/Promo_Link__c.field-meta.xml
<CustomField>
    <fullName>Promo_Link__c</fullName>
    <description>URL to internal content library where the promo flyer is stoerd</description>
    <label>Promo Link</label>
    <type>Url</type>
</CustomField>