force-app/main/default/objects/Account/fields/Purchase_Method__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Method__c</fullName>
    <inlineHelpText>Central Purchase by Account; Contractor Purchase by individual installer; Hybrid Purchase could be either/or.</inlineHelpText>
    <label>Purchase Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central Purchase</fullName>
            </value>
            <value>
                <fullName>Contractor Purchase</fullName>
            </value>
            <value>
                <fullName>Hybrid Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>