force-app/main/default/objects/Account/fields/Purchasing_Lead__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchasing Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Purchasing Lead)</relationshipLabel>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>