force-app/main/default/objects/Account/fields/Remodel__c.field-meta.xml
<CustomField>
    <fullName>Remodel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remodel</label>
    <type>Checkbox</type>
</CustomField>