force-app/main/default/objects/Account/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <label>Salesperson Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>