force-app/main/default/objects/Account/fields/Schluter_35__c.field-meta.xml
<CustomField>
    <fullName>Schluter_35__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schluter 35%</label>
    <type>Checkbox</type>
</CustomField>