force-app/main/default/objects/Account/fields/Schluter_40__c.field-meta.xml
<CustomField>
    <fullName>Schluter_40__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schluter 40%</label>
    <type>Checkbox</type>
</CustomField>