force-app/main/default/objects/Account/fields/Starnet_Commercial__c.field-meta.xml
<CustomField>
    <fullName>Starnet_Commercial__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Starnet Commercial Buying Group</inlineHelpText>
    <label>Starnet (Commercial)</label>
    <type>Checkbox</type>
</CustomField>