force-app/main/default/objects/Account/fields/State_Tax__c.field-meta.xml
<CustomField>
    <fullName>State_Tax__c</fullName>
    <label>State Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>