force-app/main/default/objects/Account/fields/TEC_25_Margin__c.field-meta.xml
<CustomField>
    <fullName>TEC_25_Margin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TEC 25 Margin</label>
    <type>Checkbox</type>
</CustomField>