force-app/main/default/objects/Account/fields/TEC_Pallet_18__c.field-meta.xml
<CustomField>
    <fullName>TEC_Pallet_18__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TEC Pallet 18 promo</description>
    <label>TEC Pallet 18</label>
    <type>Checkbox</type>
</CustomField>