force-app/main/default/objects/Account/fields/TEC_RCFN__c.field-meta.xml
<CustomField>
    <fullName>TEC_RCFN__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>TEC RCFN Buying Group</inlineHelpText>
    <label>TEC RCFN</label>
    <type>Checkbox</type>
</CustomField>