force-app/main/default/objects/Account/fields/Technology_Applications__c.field-meta.xml
<CustomField>
    <fullName>Technology_Applications__c</fullName>
    <label>Technology Applications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>