force-app/main/default/objects/Account/fields/Total_Ceramic_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Ceramic_Sales__c</fullName>
    <description>Field label changed per KF 1/19/2011
Change field label per KF email 1/21/2011</description>
    <label>What Are Your  Tile Sales Per Year?</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>