force-app/main/default/objects/Account/fields/Underlayment_Pallet__c.field-meta.xml
<CustomField>
    <fullName>Underlayment_Pallet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Underlayment Pallet</label>
    <type>Checkbox</type>
</CustomField>