force-app/main/default/objects/Account/fields/Warehouse_Lead__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Warehouse Lead)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>