force-app/main/default/objects/Account/fields/What_Are_Your_Bestselling_Glass__c.field-meta.xml
<CustomField>
    <fullName>What_Are_Your_Bestselling_Glass__c</fullName>
    <inlineHelpText>This is a text field allowing you to enter your customer&apos;s response to this question.</inlineHelpText>
    <label>What Is Your Bestselling Glass Tile?</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>