force-app/main/default/objects/Account/fields/What_Grout_Do_They_Sell__c.field-meta.xml
<CustomField>
    <fullName>What_Grout_Do_They_Sell__c</fullName>
    <label>What Grout Do They Sell</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bonsel</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Hydroment</fullName>
            </value>
            <value>
                <fullName>Laticrete</fullName>
            </value>
            <value>
                <fullName>Mapei</fullName>
            </value>
            <value>
                <fullName>TEC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>