force-app/main/default/objects/Account/fields/What_Is_Your_Bestselling_Listello__c.field-meta.xml
<CustomField>
    <fullName>What_Is_Your_Bestselling_Listello__c</fullName>
    <inlineHelpText>This is a text field allowing you to enter your customer&apos;s response to this question.</inlineHelpText>
    <label>What Is Your Bestselling Listello?</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>