force-app/main/default/objects/Account/fields/What_Setting_Materials_Do_You_Sell__c.field-meta.xml
<CustomField>
    <fullName>What_Setting_Materials_Do_You_Sell__c</fullName>
    <inlineHelpText>Select one or more options from the picklist.</inlineHelpText>
    <label>What Setting Materials Do You Sell?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Big Box Store</fullName>
            </value>
            <value>
                <fullName>Bonsel</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Laticrete</fullName>
            </value>
            <value>
                <fullName>Mapei</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Tec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>