force-app/main/default/objects/Account/fields/What_Underlayment_Do_You_Sell__c.field-meta.xml
<CustomField>
    <fullName>What_Underlayment_Do_You_Sell__c</fullName>
    <description>Field label changed per KF 1/19/2011</description>
    <inlineHelpText>Select one or more options from the picklist.</inlineHelpText>
    <label>What Underlayment Do You Sell?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Big Box Store</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Dal</fullName>
            </value>
            <value>
                <fullName>HB</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Permabase</fullName>
            </value>
            <value>
                <fullName>Pro-Tec</fullName>
            </value>
            <value>
                <fullName>Schluter</fullName>
            </value>
            <value>
                <fullName>USG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>