force-app/main/default/objects/Account/fields/When_Was_Their_Last_Schluter_Training__c.field-meta.xml
<CustomField>
    <fullName>When_Was_Their_Last_Schluter_Training__c</fullName>
    <label>When Was Their Last Schluter Training</label>
    <type>Date</type>
</CustomField>