force-app/main/default/objects/Account/fields/Why_Do_You_Sell_These_Underlayments__c.field-meta.xml
<CustomField>
    <fullName>Why_Do_You_Sell_These_Underlayments__c</fullName>
    <inlineHelpText>Select one or more options from the picklist.</inlineHelpText>
    <label>Notes on Underlayments</label>
    <type>TextArea</type>
</CustomField>