force-app/main/default/objects/Account/fields/Why_Is_This_Bestselling_Glass_Tile__c.field-meta.xml
<CustomField>
    <fullName>Why_Is_This_Bestselling_Glass_Tile__c</fullName>
    <inlineHelpText>Select one or more options from the picklist.</inlineHelpText>
    <label>Why Is This Your Bestselling Glass Tile?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Package</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Rebates</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Style</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>