force-app/main/default/objects/Account/fields/Win_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Win_Percentage__c</fullName>
    <formula>IF( Total_of_Opportunities__c  &gt; 0,  Total_of_Won_Opportunities__c  /  Total_of_Opportunities__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Win Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>