force-app/main/default/objects/Account/fields/X2011_Sales__c.field-meta.xml
<CustomField>
    <fullName>X2011_Sales__c</fullName>
    <label>2011 Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>