force-app/main/default/objects/Account/fields/X5_Star_Commercial__c.field-meta.xml
<CustomField>
    <fullName>X5_Star_Commercial__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>5 Start Commercial Buying Group</inlineHelpText>
    <label>5 Star (Commercial)</label>
    <type>Checkbox</type>
</CustomField>