force-app/main/default/objects/Account/recordTypes/Dealers.recordType-meta.xml
<RecordType>
    <fullName>Dealers</fullName>
    <active>true</active>
    <description>Account type for Dealers</description>
    <label>Dealers</label>
</RecordType>