force-app/main/default/objects/Account/recordTypes/Professional.recordType-meta.xml
<RecordType>
    <fullName>Professional</fullName>
    <active>true</active>
    <description>Select to create professional type account.</description>
    <label>Professional</label>
</RecordType>