force-app/main/default/objects/Account/recordTypes/Retail.recordType-meta.xml
<RecordType>
    <fullName>Retail</fullName>
    <active>true</active>
    <description>Select to create retail type account.</description>
    <label>Retail</label>
</RecordType>