force-app/main/default/objects/Account/recordTypes/Vendor_Partner_Competitor.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Partner_Competitor</fullName>
    <active>true</active>
    <description>Select to create Vendor/Partner/Competitor type account</description>
    <label>Vendor/Partner/Competitor</label>
</RecordType>