force-app/main/default/objects/Account/listViews/A_D_Accounts_Cincinnati.listView-meta.xml
<ListView>
    <fullName>A_D_Accounts_Cincinnati</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Customer_Type__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Branch__c</field>
        <operation>equals</operation>
        <value>Cincinnati</value>
    </filters>
    <label>Accounts Cincinnati</label>
</ListView>