force-app/main/default/objects/Account/listViews/A_D_Accounts_Columbus.listView-meta.xml
<ListView>
    <fullName>A_D_Accounts_Columbus</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Customer_Type__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>01230000000a1HR</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_CITY</field>
        <operation>equals</operation>
        <value>Columbus</value>
    </filters>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE</field>
        <operation>equals</operation>
        <value>Ohio,OH</value>
    </filters>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>A&amp;D Accounts Columbus</label>
</ListView>