force-app/main/default/objects/Account/listViews/A_D_Accounts_South_Bend.listView-meta.xml
<ListView>
    <fullName>A_D_Accounts_South_Bend</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Customer_Type__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Primary_Branch__c</field>
        <operation>equals</operation>
        <value>South Bend 075</value>
    </filters>
    <filters>
        <field>Account_Category__c</field>
        <operation>equals</operation>
        <value>Architect,Dealer</value>
    </filters>
    <label>A&amp;D Accounts - South Bend</label>
</ListView>