force-app/main/default/objects/Account/listViews/Account_Default.listView-meta.xml
<ListView>
    <fullName>Account_Default</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Email__c</columns>
    <columns>Branch__c</columns>
    <columns>Account_Category__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Price_Level__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>High_Focus_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>Default Account View</label>
</ListView>