force-app/main/default/objects/Account/listViews/All_Accounts_Grand_Rapids.listView-meta.xml
<ListView>
    <fullName>All_Accounts_Grand_Rapids</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch__c</field>
        <operation>equals</operation>
        <value>Grand Rapids</value>
    </filters>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Archive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Accounts - Grand Rapids</label>
</ListView>