force-app/main/default/objects/Account/listViews/All_Accounts_Indianapolis.listView-meta.xml
<ListView>
    <fullName>All_Accounts_Indianapolis</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Customer_Type__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts - Indianapolis</label>
</ListView>